Structural changes - introducing new libraries and tsconfig changes

--- a/package.json
+++ b/package.json
@@ -9,14 +9,44 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^6.0.16",
+    "@mantine/ds": "^6.0.16",
+    "@mantine/hooks": "^6.0.16",
+    "@mantine/modals": "^6.0.16",
+    "@mantine/notifications": "^6.0.16",
+    "@mantine/prism": "^6.0.16",
+    "@near-wallet-selector/core": "^8.2.0",
+    "@near-wallet-selector/default-wallets": "^8.1.4",
+    "@near-wallet-selector/math-wallet": "^8.2.0",
+    "@near-wallet-selector/meteor-wallet": "^8.2.0",
+    "@near-wallet-selector/modal-ui": "^8.2.0",
+    "@near-wallet-selector/near-wallet": "^8.2.0",
+    "@near-wallet-selector/nightly": "^8.2.0",
+    "@near-wallet-selector/nightly-connect": "^8.2.0",
+    "@near-wallet-selector/sender": "^8.2.0",
+    "@near-wallet-selector/wallet-connect": "^8.2.0",
+    "@tanstack/react-query": "^4.29.19",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
-    "next": "13.4.7",
+    "eventemitter3": "^5.0.1",
+    "form-data": "^4.0.0",
+    "isomorphic-fetch": "^3.0.0",
+    "near-api-js": "^2.1.4",
+    "next": "13.1.0",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "tabler-icons-react": "^1.56.0",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/isomorphic-fetch": "^0.0.36",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
