--- a/package.json
+++ b/package.json
@@ -20,18 +20,27 @@
     "@mantine/modals": "^6.0.16",
     "@mantine/notifications": "^6.0.16",
     "@mantine/prism": "^6.0.16",
-    "@near-wallet-selector/core": "7.0.3",
-    "@near-wallet-selector/default-wallets": "7.0.3",
-    "@near-wallet-selector/ledger": "7.0.3",
-    "@near-wallet-selector/math-wallet": "7.0.3",
-    "@near-wallet-selector/meteor-wallet": "7.0.3",
-    "@near-wallet-selector/modal-ui": "^7.0.3",
-    "@near-wallet-selector/my-near-wallet": "7.0.3",
-    "@near-wallet-selector/near-wallet": "7.0.3",
-    "@near-wallet-selector/nightly": "7.0.3",
-    "@near-wallet-selector/nightly-connect": "7.0.3",
-    "@near-wallet-selector/sender": "7.0.3",
-    "@near-wallet-selector/wallet-connect": "7.0.3",
+    "@near-wallet-selector/coin98-wallet": "^8.2.1",
+    "@near-wallet-selector/default-wallets": "^8.1.4",
+    "@near-wallet-selector/finer-wallet": "^8.2.1",
+    "@near-wallet-selector/here-wallet": "^8.2.1",
+    "@near-wallet-selector/ledger": "^8.2.1",
+    "@near-wallet-selector/math-wallet": "^8.2.1",
+    "@near-wallet-selector/meteor-wallet": "^8.2.1",
+    "@near-wallet-selector/modal-ui": "^8.2.1",
+    "@near-wallet-selector/my-near-wallet": "^8.2.1",
+    "@near-wallet-selector/narwallets": "^8.2.1",
+    "@near-wallet-selector/near-snap": "^8.2.1",
+    "@near-wallet-selector/near-wallet": "^8.2.1",
+    "@near-wallet-selector/nearfi": "^8.2.1",
+    "@near-wallet-selector/neth": "^8.2.1",
+    "@near-wallet-selector/nightly": "^8.2.1",
+    "@near-wallet-selector/nightly-connect": "^8.2.1",
+    "@near-wallet-selector/opto-wallet": "^8.2.1",
+    "@near-wallet-selector/sender": "^8.2.1",
+    "@near-wallet-selector/wallet-connect": "^8.2.1",
+    "@near-wallet-selector/welldone-wallet": "^8.2.1",
+    "@near-wallet-selector/xdefi": "^8.2.1",
     "@tabler/icons-react": "^2.24.0",
     "@tanstack/react-query": "^4.29.19",
     "@types/node": "20.3.3",
@@ -50,6 +59,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-parallax-tilt": "^1.7.156",
+    "react-universal-tilt": "^1.3.1",
     "tabler-icons-react": "^1.56.0",
     "typescript": "5.1.6"
   },
@@ -60,9 +71,9 @@
     "@types/bn.js": "^5.1.1",
     "@types/file-saver": "^2.0.5",
     "@types/http-proxy": "^1.17.9",
-    "eslint-config-prettier": "^8.8.0",
     "@types/isomorphic-fetch": "^0.0.36",
     "autoprefixer": "^10.4.14",
+    "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
   }
