--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@mantine/carousel": "^6.0.19",
     "@mantine/core": "^6.0.16",
     "@mantine/dates": "^6.0.16",
     "@mantine/dropzone": "^6.0.16",
@@ -48,6 +49,7 @@
     "@types/react-dom": "18.2.6",
     "better-sqlite3": "^8.4.0",
     "dayjs": "^1.11.9",
+    "embla-carousel-react": "^8.0.0-rc11",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "eventemitter3": "^5.0.1",
