--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mantine/form": "^6.0.21",
     "@mantine/hooks": "^6.0.21",
     "@mantine/modals": "^6.0.21",
+    "@mantine/next": "^6.0.21",
     "@mantine/notifications": "^6.0.21",
     "@mantine/prism": "^6.0.21",
     "@near-wallet-selector/coin98-wallet": "^8.2.1",
