--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mantine/next": "^6.0.21",
     "@mantine/notifications": "^6.0.21",
     "@mantine/prism": "^6.0.21",
+    "@near-js/iframe-rpc": "^0.0.2",
     "@near-wallet-selector/coin98-wallet": "^8.2.1",
     "@near-wallet-selector/default-wallets": "^8.1.4",
     "@near-wallet-selector/finer-wallet": "^8.2.1",
@@ -50,13 +51,14 @@
     "@types/react-dom": "18.2.6",
     "better-sqlite3": "^8.4.0",
     "dayjs": "^1.11.9",
-    "embla-carousel-react": "^8.0.0-rc14",
+    "embla-carousel-react": "^7.1.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "eventemitter3": "^5.0.1",
     "form-data": "^4.0.0",
     "isomorphic-fetch": "^3.0.0",
     "near-api-js": "^2.1.4",
+    "near-fastauth-wallet": "^0.0.8",
     "next": "13.1.0",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
