--- a/package.json
+++ b/package.json
@@ -59,12 +59,16 @@
     "near-api-js": "^2.1.4",
     "next": "13.1.0",
     "next-auth": "^4.22.1",
+    "pdf-lib": "^1.17.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-parallax-tilt": "^1.7.156",
+    "react-signature-pad": "^0.0.6",
+    "react-signature-pad-wrapper": "^3.3.3",
     "react-universal-tilt": "^1.3.1",
     "tabler-icons-react": "^1.56.0",
+    "to-words": "^3.7.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
